--- a/avifencodergui.wpf/MainWindow.xaml
+++ b/avifencodergui.wpf/MainWindow.xaml
@@ -4,12 +4,17 @@
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:avifencodergui.wpf" xmlns:viewmodels="clr-namespace:avifencodergui.wpf.ViewModels"
-        xmlns:i="clr-namespace:System.Windows.Interactivity;assembly=System.Windows.Interactivity"
+        xmlns:i="clr-namespace:System.Windows.Interactivity;assembly=System.Windows.Interactivity" xmlns:converter="clr-namespace:avifencodergui.wpf.Converter"
         mc:Ignorable="d"
         Title="MainWindow" Height="450" Width="470"
 
 
     >
+
+    <Window.Resources>
+        <converter:VisiblityStringAnyConverter x:Key="VisiblityStringAnyConverter" />
+    </Window.Resources>
+    
 
     <i:Interaction.Triggers>
         <i:EventTrigger EventName="Loaded">
@@ -45,7 +50,12 @@
                     <Border BorderBrush="Gray" BorderThickness="0.5" Margin="2" Padding="2" Background="Beige">
                         <StackPanel>
                             <TextBlock Text="{Binding FileName}" FontSize="8"></TextBlock>
-                            <TextBlock Text="{Binding FormattedLength}" FontSize="8"></TextBlock>
+                            <StackPanel Orientation="Horizontal">
+                                <TextBlock Text="{Binding FormattedLength}" FontSize="8"></TextBlock>
+                                <TextBlock Text=" -> " FontSize="8" Visibility="{Binding TargetFileFormattedLength, Converter={StaticResource VisiblityStringAnyConverter}}"></TextBlock>
+                                <TextBlock Text="{Binding TargetFileFormattedLength}" FontSize="8"></TextBlock>
+                            </StackPanel>
+                            
                             <TextBlock Text="{Binding State}" FontStyle="Italic" FontSize="8"></TextBlock>
                         </StackPanel>
                     </Border>
