--- a/avifencodergui.wpf/Windows/SettingsWindow.xaml
+++ b/avifencodergui.wpf/Windows/SettingsWindow.xaml
@@ -24,8 +24,12 @@
         <TextBox Padding="5" FontFamily="Consolas" FontSize="10" AcceptsReturn="True" AcceptsTab="True"
                  ScrollViewer.VerticalScrollBarVisibility="Visible" Text="{Binding Config}" />
         <StackPanel Grid.Row="1" Orientation="Horizontal" HorizontalAlignment="Right">
-            <Button Content="Save" Margin="10" Padding="5" Command="{Binding SaveCommand}" />
-            <Button Content="Cancel" Margin="10" Padding="5" Command="{Binding CancelCommand}" />
+            <TextBlock Text="Selected Settings"></TextBlock>
+            <ComboBox></ComboBox>
+            <Button Content="Refesh" Margin="10" Padding="10,5" Command="{Binding SaveCommand}" />
+            <Button Content="Open folder" Margin="10" Padding="10,5" Command="{Binding SaveCommand}" />
+            <Button Content="Save" Margin="10" Padding="10,5" Command="{Binding SaveCommand}" />
+            <Button Content="Cancel" Margin="10" Padding="10,5" Command="{Binding CancelCommand}" />
         </StackPanel>
     </Grid>
 </Window>
